--- a/src/components/Note/Note.module.css
+++ b/src/components/Note/Note.module.css
@@ -1,7 +1,6 @@
 .note {
   background-color: white;
-  padding-top: 24px;
-  padding: 16px;
+  padding: 24px 16px 4px;
   border-radius: 6px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.243);
   font-size: 0.9rem;
